<resources>
    <!-- Setting Contents -->
    <string name="quickAlarm_bell">QuickAlarm Bell</string>
    <string name="quickAlarm_mode">QuickAlarm Mode</string>
    <string name="quickAlarm_vibrate">QuickAlarm Vibrate</string>
    <string name="blank"> </string>
    <string name="user_guide">User Guide</string>
    <string name="app_info">App Info</string>

    <!-- User Guide Contents -->
    <string name="notification_permission">Get Notification Permission</string>
    <string name="notification_permission_description">Please permit notification to show you next alarm.</string>
    <string name="battery_optimize">Set Battery Optimize</string>
    <string name="battery_optimize_description">Please turn off the battery optimize for on time alarm</string>
    <string name="complete">Complete</string>
    <string name="not_set">Not Set</string>

    <!-- common text -->
    <string name="app_name">PairAlarm</string>
    <string name="progressFinish">Done!</string>
    <string name="progressInit">Initialize Local Database</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="alarm">Alarm name</string>
    <string name="alarmSet_AM">AM</string>
    <string name="alarmSet_PM">PM</string>
    <string name="save">save</string>
    <string name="update">update</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="play">play</string>
    <string name="stop">stop</string>
    <string name="ten_minutes_later">10minutes</string>
    <string name="time_split">:</string>
    <string name="problem_plus">+</string>
    <string name="problem_equal">=</string>

    <!-- Calculator Text -->
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>

    <!-- error message -->
    <string name="on_alarm_error">Error!!: Could not read alarm data</string>
    <string name="some_error">Error is occurred. \n please try again.</string>

    <!-- Weekend -->
    <string name="monday_short">M</string>
    <string name="tuesday_short">T</string>
    <string name="wednesday_short">W</string>
    <string name="thursday_short">T</string>
    <string name="friday_short">F</string>
    <string name="saturday_short">S</string>
    <string name="sunday_short">S</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <!-- Alarm Set -->
    <string name="alarmSet_selectBell">Alarm Bell</string>
    <string name="alarmSet_selectMode">Alarm Mode</string>
    <string name="alarmSet_selectBellTextTitle">Current Bell</string>
    <string name="alarmSet_selectModeTextTitle">Current Mode</string>
    <string name="alarmSet_Toast_week">Please set week</string>
    <string name="alarmSet_selectBellDialogTitle">Select Alarm Mode</string>
    <string name="alarmSet_alarmModeItem1">Normal</string>
    <string name="alarmSet_alarmModeItem2">Calculator</string>
    <string name="alarmSet_calRepeat">Calculate Repeat</string>
    <string name="alarmSet_simpleAlarmSubText">later alarm will go off</string>
    <string name="alarmSet_60minButton">+60min</string>
    <string name="alarmSet_30minButton">+30min</string>
    <string name="alarmSet_15minButton">+15min</string>
    <string name="alarmSet_10minButton">+10min</string>
    <string name="alarmSet_5minButton">+5min</string>
    <string name="alarmSet_1minButton">+1min</string>
    <string name="alarmSet_default_time">00</string>

    <!-- about Dialog -->
    <string name="dialog_permission_title">Permission</string>
    <string name="dialog_overlay_message">Overlay permission is necessary to show alarm on the background</string>
    <string name="dialog_notification_permission_message">Notification is essential to use QuickAlarm</string>
    <string name="dialog_bell_set_title">Bell Select</string>
    <string name="dialog_delete_title">Delete Alarm</string>
    <string name="dialog_delete_content">Do you want to delete this alarm?</string>
    <string name="dialog_permission_overlay_no">Need overlay permission to use this app</string>

    <!-- bell type-->
    <string name="bellType_Normal_Walking">Walking</string>
    <string name="bellType_Normal_PianoMan">PianoMan</string>
    <string name="bellType_Normal_Happy">HappyTown</string>
    <string name="bellType_Normal_Lonely">Lonely</string>

    <!-- notification -->
    <string name="alarm_notification_channel_id">alarmChanel</string>
    <string name="alarm_notification_channel_name">Next Alarm</string>
    <string name="weather_notification_channel_id">alarmChanel</string>
    <string name="weather_notification_channel_name">Weather Alarm</string>
    <string name="alarm_notification_title">Next alarm</string>
    <string name="actionButton1">+5 Min</string>
    <string name="actionButton2">+15 Min</string>
    <string name="actionButton3">+30 Min</string>

    <!-- Toast -->
    <string name="toast_set_minimum_time">Please set at least one minute</string>
    <string name="toast_ten_minute_later">Alarm goes off 10minutes later</string>
    <string name="toast_get_dataStore_error">Fail to get data from dataStore</string>
    <string name="toast_correct_calculator_answer">Correct answer!!</string>
    <string name="toast_wrong_calculator_answer">Wrong answer. Please put again.</string>
    <string name="toast_set_batter_optimize">You can set battery optimize for this app setting from OS</string>
    <string name="toast_notification_permission">You can set notification permission from this app setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
