<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/rounded_corner_orange"
        android:orientation="vertical"
        android:padding="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="20dp"
            android:text="@string/dialog_bell_set_title"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/RadioGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/radioButton_N1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nanumgothicbold"
            android:textSize="17dp"
            android:textColor="@color/white"
            android:text="@string/bellType_Normal_Walking" />

        <RadioButton
            android:id="@+id/radioButton_N2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:fontFamily="@font/nanumgothicbold"
            android:textColor="@color/white"
            android:text="@string/bellType_Normal_PianoMan" />

        <RadioButton
            android:id="@+id/radioButton_N3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:fontFamily="@font/nanumgothicbold"
            android:textColor="@color/white"
            android:text="@string/bellType_Normal_Happy" />

        <RadioButton
            android:id="@+id/radioButton_N4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:fontFamily="@font/nanumgothicbold"
            android:textColor="@color/white"
            android:text="@string/bellType_Normal_Lonely" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/playButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/new_subTextColor"
                app:cornerRadius="20dp"
                android:layout_weight="1"
                android:padding="12dp"
                android:text="@string/play" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:backgroundTint="@color/mainColor"
                app:cornerRadius="20dp"
                android:layout_weight="1"
                android:padding="12dp"
                android:text="@string/save" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>