<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.easyo.pairalarm.ui.activity.NormalAlarmActivity"
    android:background="@color/background"
    android:id="@+id/scrollLayout"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15dp"
        android:id="@+id/rootLayout"
        android:clickable="true"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/alarmName_editTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_clock"
            app:startIconTint="@color/white"
            app:hintTextColor="@color/subColor"
            android:textColorHint="@color/white"
            android:hint="@string/alarm">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/alarmName_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@android:color/transparent"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/plusHourText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanumgothicextrabold"
                android:text="00"
                android:textColor="@color/white"
                android:textSize="65dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanumgothicextrabold"
                android:text=":"
                android:textColor="@color/white"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="65dp" />

            <TextView
                android:id="@+id/plusMinText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanumgothicextrabold"
                android:text="00"
                android:textColor="@color/white"
                android:textSize="65dp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/new_subTextColor"
            android:textSize="20dp"
            android:text="@string/alarmSet_simpleAlarmSubText"
            android:layout_marginBottom="15dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/min60_Button"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/itemBackground"
                app:cornerRadius="20dp"
                android:layout_weight="1"
                android:padding="12dp"
                android:text="@string/alarmSet_60minButton" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/min30_Button"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/itemBackground"
                app:cornerRadius="20dp"
                android:layout_weight="1"
                android:padding="12dp"
                android:text="@string/alarmSet_30minButton" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/min15_Button"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/itemBackground"
                app:cornerRadius="20dp"
                android:layout_weight="1"
                android:padding="12dp"
                android:text="@string/alarmSet_15minButton" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/min10_Button"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/itemBackground"
                app:cornerRadius="20dp"
                android:layout_weight="1"
                android:padding="12dp"
                android:text="@string/alarmSet_10minButton" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/min5_Button"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/itemBackground"
                app:cornerRadius="20dp"
                android:layout_weight="1"
                android:padding="12dp"
                android:text="@string/alarmSet_5minButton" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/min1_Button"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/itemBackground"
                app:cornerRadius="20dp"
                android:layout_weight="1"
                android:padding="12dp"
                android:text="@string/alarmSet_1minButton" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_vibration"
                android:layout_width="35dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_no_vib" />

            <ImageView
                android:id="@+id/image_volume"
                android:layout_width="35dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/volume_icon" />

            <SeekBar
                android:id="@+id/volumeSeekBar"
                style="@android:style/Widget.DeviceDefault.Light.SeekBar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:max="100"
                android:min="0"
                android:progress="100"
                android:theme="@style/seekbarTheme"
                android:thumb="?android:attr/textSelectHandle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            >

            <com.github.nikartm.button.FitButton
                android:id="@+id/selectBell_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:enabled="true"
                android:gravity="center_vertical"
                app:fb_backgroundColor="@color/main_orange"
                app:fb_cornerRadius="10dp"
                app:fb_divColor="#fff"
                app:fb_divHeight="40dp"
                app:fb_divWidth="1dp"
                app:fb_icon="@drawable/ic_baseline_music"
                app:fb_iconColor="#FFF"
                app:fb_iconHeight="28dp"
                app:fb_iconMarginEnd="10dp"
                app:fb_iconMarginStart="10dp"
                app:fb_iconPosition="left"
                app:fb_iconWidth="28dp"
                app:fb_rippleColor="#FBE9E7"
                app:fb_shape="rectangle"
                app:fb_text="@string/alarmSet_selectBell"
                app:fb_textColor="#FFF"
                app:fb_textPaddingStart="16dp" />

            <com.github.nikartm.button.FitButton
                android:id="@+id/selectMode_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:enabled="true"
                android:gravity="center_vertical"
                app:fb_backgroundColor="@color/mainColor"
                app:fb_cornerRadius="10dp"
                app:fb_divColor="#fff"
                app:fb_divHeight="40dp"
                app:fb_divWidth="1dp"
                app:fb_icon="@drawable/calculator"
                app:fb_iconColor="#FFF"
                app:fb_iconHeight="28dp"
                app:fb_iconMarginEnd="10dp"
                app:fb_iconMarginStart="10dp"
                app:fb_iconPosition="left"
                app:fb_iconWidth="28dp"
                app:fb_rippleColor="#FBE9E7"
                app:fb_shape="rectangle"
                app:fb_text="@string/alarmSet_selectMode"
                app:fb_textColor="#FFF"
                app:fb_textPaddingStart="16dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/new_subTextColor"
                android:fontFamily="@font/nanumgothicextrabold"
                android:text="@string/alarmSet_selectBellTextTitle" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/new_subTextColor"
                android:fontFamily="@font/nanumgothicextrabold"
                android:text="@string/alarmSet_selectModeTextTitle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            >

            <TextView
                android:id="@+id/text_currentBell"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:fontFamily="@font/nanumgothicbold"
                android:textSize="16dp"
                android:textColor="@color/white"
                android:text="@string/alarmSet_selectBellTextTitle"/>

            <TextView
                android:id="@+id/text_currentMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:fontFamily="@font/nanumgothicbold"
                android:textSize="16dp"
                android:textColor="@color/white"
                android:text="@string/alarmSet_selectModeTextTitle"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancelButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="@color/new_subTextColor"
                app:cornerRadius="20dp"
                android:layout_weight="1"
                android:padding="12dp"
                android:text="@string/cancel" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="@color/mainColor"
                app:cornerRadius="20dp"
                android:layout_weight="1"
                android:padding="12dp"
                android:text="@string/save" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>